--- a/src/NavBtn.scss
+++ b/src/NavBtn.scss
@@ -5,6 +5,7 @@ button {
 	padding: 20px;
 	width: 100%;
 	cursor: pointer;
+	background-color: var(--bg-color);
 }
 
 span {
